@@ -24,7 +24,7 @@
 
 #include <gtk/gtk.h>
 
-#ifdef _WIN32
+#ifdef WIN32
 #include <windows.h>
 #endif
 
