@@ -35,6 +35,34 @@ extern gboolean
 draw_time_signature(Score_t *score, Staff_t *staff, cairo_t *cr, gboolean selected)
 {
 
+        gdouble key_signature_start_x;
+
+        key_signature_start_x = staff->extremity_begin_x + Spacings.Clefs.sb + (score->zoom * TREBLE_CLEF_WIDTH_FACTOR) + Spacings.Clefs.sa;
+
+        g_print("staff->ts[0] = %d,staff->ts[1] = %d,staff->ts[2] = %d\n",
+                staff->time_signature[0],staff->time_signature[1],staff->time_signature[2]);
+
+        cairo_select_font (cr, "gscore", CAIRO_FONT_SLANT_NORMAL,
+                           CAIRO_FONT_WEIGHT_BOLD);
+
+        cairo_set_rgb_color (cr, 
+                             score->ColorObject->clefs->red, score->ColorObject->clefs->green, score->ColorObject->clefs->blue);
+
+        switch ( staff->time_signature[0] ) {
+        case TIME_SIGNATURE_NORMAL:
+                cairo_move_to(cr, key_signature_start_x + get_key_signature_spacing(score, staff) + Spacings.KeySignatures.saks,
+                              staff->extremity_begin_y + 16);
+                cairo_scale_font (cr, 16);
+                cairo_show_text (cr, g_strdup_printf("%d", staff->time_signature[1]));
+                cairo_move_to(cr, key_signature_start_x + get_key_signature_spacing(score, staff) + Spacings.KeySignatures.saks,
+                              staff->extremity_begin_y + 32);
+                cairo_show_text (cr, g_strdup_printf("%d", staff->time_signature[2]));
+                break;
+        case TIME_SIGNATURE_COMMON_TIME:
+                break;
+        case TIME_SIGNATURE_ALLA_BREVE:
+                break;
+        }
 
         return TRUE;
 }
