@@ -25,10 +25,11 @@
 #define _SPACINGS_H_
 
 #include <glib.h>
+#include "gscore.h"
 
 #define TREBLE_CLEF_WIDTH_FACTOR 0.63  /* Cairo factor of the treble clef width */
 
-gint get_key_signature_spacing(gint key_signature);
+gdouble get_key_signature_spacing(Score_t *score, Staff_t *staff);
 void set_spacings_init(void);
 void set_values_spacings_spinbuttons(void);
 void update_spacings_from_spinbuttons(void);
